--- a/standalone-frontend/base.html
+++ b/standalone-frontend/base.html
@@ -7,8 +7,11 @@
     <title>Chatbot</title>
 </head>
 <body>
-<div class="container">
+   
+<div class="container" >
+    
     <div class="chatbox">
+        <h1>The Chatbot</h1>
         <div class="chatbox__support">
             <div class="chatbox__header">
                 <div class="chatbox__image--header">
